--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/is-prop-valid": "latest",
+    "@emotion/is-prop-valid": "1.2.2",
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-accordion": "1.2.2",
@@ -47,8 +47,8 @@
     "cmdk": "1.0.4",
     "date-fns": "3.3.1",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "latest",
-    "geist": "latest",
+    "framer-motion": "11.0.3",
+    "geist": "1.2.2",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.1.0",
